syntax = "proto3";

package pb;

// Represents value of data object that client wants to retrieve / store
message Data {
  string data = 1
}

// Represents name-value of data object that client wants to store
message FileStore {
  string name = 1;
  Data data = 2;
}

// Represents name of data object that client wants to retrieve
message FileGet {
  string name = 1;
}

// Represents name of data object that client wants to delete
message FileDelete {
  string name = 1;
}

// Represent a void message indicating success of file storage
message Success {
}

// Represent a void message indicating file not being located
message FileNotFound {
}

// Represents an error.
message Error {
    string msg = 1;
}

// Represents an operation result.
message Result {
    oneof result {
        Data d = 1;
        Success s = 2;
        FileNotFound f = 3;
    }
}

// File system service
service FileSystem {
    // Get the value associated with a key.
    rpc Get (FileGet) returns (Result) {}
    rpc Store (FileStore) returns (Result) {}
    rpc Delete(FileDelete) returns (Result) {}
}

// Internal representations for operations.
enum Op {
    GET = 0;
    STORE = 1;
    DELETE = 2;
}

// A type for arguments across all operations
message Command {
    Op operation = 1;
    oneof arg {
        FileGet get = 2;
        FileStore store = 3;
        FileDelete delete = 4;
    }
}

//TODO: Define args and ret of each rpc
// Input to FindSuccessor
message FindSuccessorArgs {
    int64 id = 1;
}

// Output from FindSuccessor
message FindSuccessorRet {
    int64 successor = 1;
}

// Input to Notify
message NotifyArgs {
    int64 id = 1;
}

// Output from Notify
message NotifyRet {
    bool updated = 1;
}

// Input to PingPredecessor
message PingPredecessorArgs {
}

// Output from PingPredecessor
message PingPredecessorRet {
}

// Chord service
service Chord {
    rpc FindSuccessor(FindSuccessorArgs) returns (FindSuccessorRet) {}
    rpc Notify(NotifyArgs) returns (NotifyRet) {}
    rpc PingPredecessor(PingPredecessorArgs) returns (PingPredecessorRet) {}
}
